lava/templates/deployment_server1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lava1
spec:
  replicas: 1
  selector:
    matchLabels:
        app: books
        server: lava1
  template:
    metadata:
      labels:
        app: books
        server: lava1
    spec:
      containers:
        - name: server1
          image: "docker.io/library/lava:1.0.5"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
              limits:
                cpu: 100m
                memory: 128Mi
              requests:
                cpu: 100m
                memory: 128Mi
