lava/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary
spec:
  type: LoadBalancer 
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: lava
  selector:
      app: books
