lava/templates/service_server1.yaml
apiVersion: v1
kind: Service
metadata:
  name: lava1
  labels:
        app: books
        server: lava1
spec:
  type: LoadBalancer 
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
        app: books
        server: lava1
