lava/templates/service_server2.yaml
apiVersion: v1
kind: Service
metadata:
  name: lava2
  labels:
    app.kubernetes.io/name: lava2
    app.kubernetes.io/instance: lava2
spec:
  ports:
    - port: 8082
      targetPort: 5000
      protocol: TCP
  selector:
    app.kubernetes.io/name: lava2
    app.kubernetes.io/instance: lava2
